# scannetpp

./: .gitignore  labels_mapping.py  pyproject.toml  readme.sh  requirements.txt  run.sh
common/: render.py
common/configs/: render.yml
dslr/: undistort.py
dslr/configs/: undistort.yml
scannetpp/: main.py  pyproject.toml
semantic/transforms/: mesh.py
semantic/viz/: viz_pth_data.py
