[project]
name = "scannetpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <=3.10"
dependencies = [
    "imageio>=2.37.0",
    "lz4>=4.4.4",
    "munch>=4.0.0",
    "numpy>=1.26.3",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.0.0",
    "plyfile>=1.1.2",
    "pyyaml>=6.0.2",
    "scipy>=1.13.1",
    "torch==1.13.1+cu116",
    "torchaudio==0.13.1",
    "torchvision==0.14.1+cu116",
    "tqdm>=4.66.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu116"
name = "pytorch"

[tool.uv.workspace]
members = [
    "renderpy",
]
